[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/base.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/backgrounds/test.png" type="Texture" id=2]
[ext_resource path="res://scenes/levels/test.gd" type="Script" id=3]
[ext_resource path="res://scenes/levels/TurrentGrid.gd" type="Script" id=5]

[node name="Test" instance=ExtResource( 1 )]
script = ExtResource( 3 )
_floor_pos = 272
_air_pos = 128

[node name="Background" parent="." index="0"]
texture = ExtResource( 2 )

[node name="TurrentGrid" type="TileMap" parent="." index="1"]
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 5 )

[node name="Core" parent="." index="3"]
position = Vector2( 527, 272 )

[node name="BuyTower" type="Button" parent="CanvasLayer/UI/Towers/Scoll/Grid" index="0"]
margin_right = 18.0
margin_bottom = 19.0
text = "1"

[node name="Save" type="Button" parent="CanvasLayer" index="1"]
margin_left = 224.0
margin_top = 152.0
margin_right = 265.0
margin_bottom = 172.0
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="CanvasLayer" index="2"]
margin_left = 224.0
margin_top = 128.0
margin_right = 236.0
margin_bottom = 148.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/UI/Towers/Scoll/Grid/BuyTower" to="." method="_on_Tower_purchased"]
[connection signal="pressed" from="CanvasLayer/Save" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Load" to="." method="_on_Load_pressed"]
